refactor: extract actor card partial

--- a/templates/party-summary.hbs
+++ b/templates/party-summary.hbs
@@ -11,95 +11,7 @@
       {{#if actors.length}}
         <ul class="party-grid">
           {{#each actors}}
-            <li class="party-card" data-actor-id="{{this.id}}" draggable="true" data-drag-source="partyview-pc">
-              <div class="portrait-wrap">
-                <img class="portrait" src="{{this.img}}" alt="{{this.name}}" />
-                {{#if this.coins}}
-                  <div class="coins-row">
-                    <span class="coin coin-pp" title="Platinum"></span>
-                    <span class="coin-val">{{this.coins.ppDisp}}</span>
-                    <span class="coin coin-gp" title="Gold"></span>
-                    <span class="coin-val">{{this.coins.gpDisp}}</span>
-                    <span class="coin coin-sp" title="Silver"></span>
-                    <span class="coin-val">{{this.coins.spDisp}}</span>
-                    <span class="coin coin-cp" title="Copper"></span>
-                    <span class="coin-val">{{this.coins.cpDisp}}</span>
-                  </div>
-                {{/if}}
-              </div>
-
-              <div class="info">
-                <header class="name">{{this.name}}</header>
-                <div class="meta">
-                  {{#if this.hp}}
-                    <span class="tag">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-heart icon-hp"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.HP"}}: {{{this.hp}}}
-                    </span>
-                  {{/if}}
-
-                  {{#if this.ac}}
-                    <span class="tag">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-shield-halved icon-ac"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.AC"}}: {{this.ac}}
-                    </span>
-                  {{/if}}
-
-                  {{#if this.level}}
-                    <span class="tag">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-star icon-level"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.Level"}}: {{this.level}}
-                    </span>
-                  {{/if}}
-
-                  {{#if this.pp}}
-                    <span class="tag">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-eye icon-pp"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.PP"}}: {{this.pp}}
-                    </span>
-                  {{/if}}
-
-                  {{#if this.classes}}
-                    <span class="tag">{{localize "PARTYVIEW.Classes"}}: {{this.classes}}</span>
-                  {{/if}}
-
-                  {{#if this.legendaryActions}}
-                    <span class="tag" title="{{localize 'PARTYVIEW.LegendaryActions'}}">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-dragon icon-legendary"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.LA"}}: {{this.legendaryActions}}
-                    </span>
-                  {{/if}}
-
-                  {{#if this.legendaryResist}}
-                    <span class="tag" title="{{localize 'PARTYVIEW.LegendaryResistances'}}">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-shield icon-legendary"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.LR"}}: {{this.legendaryResist.value}}{{#if this.legendaryResist.max}}/{{this.legendaryResist.max}}{{/if}}
-                    </span>
-                  {{/if}}
-
-                  {{#if this.hasRegen}}
-                    <span class="tag" title="{{localize 'PARTYVIEW.Regeneration'}}">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-plus icon-regen"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.Regen"}}
-                    </span>
-                  {{/if}}
-                </div>
-              </div>
-            </li>
+            {{> "modules/partyview/templates/partials/actor-card.hbs" actor=this showIcons=../showIcons draggable=true}}
           {{/each}}
         </ul>
       {{else}}
@@ -118,63 +30,7 @@
       {{#if npcs.length}}
         <ul class="party-grid">
           {{#each npcs}}
-            <li class="party-card npc-card" data-actor-id="{{this.id}}">
-              <button type="button" class="remove-npc-btn" title="Remove NPC" aria-label="Remove NPC">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <div class="portrait-wrap">
-                <img class="portrait" src="{{this.img}}" alt="{{this.name}}" />
-              </div>
-              <div class="info">
-                <header class="name">{{this.name}}</header>
-                <div class="meta">
-                  {{#if this.hp}}
-                    <span class="tag">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-heart icon-hp"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.HP"}}: {{{this.hp}}}
-                    </span>
-                  {{/if}}
-
-                  {{#if this.ac}}
-                    <span class="tag">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-shield-halved icon-ac"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.AC"}}: {{this.ac}}
-                    </span>
-                  {{/if}}
-
-                  {{#if this.legendaryActions}}
-                    <span class="tag" title="{{localize 'PARTYVIEW.LegendaryActions'}}">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-dragon icon-legendary"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.LA"}}: {{this.legendaryActions}}
-                    </span>
-                  {{/if}}
-
-                  {{#if this.legendaryResist}}
-                    <span class="tag" title="{{localize 'PARTYVIEW.LegendaryResistances'}}">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-shield icon-legendary"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.LR"}}: {{this.legendaryResist.value}}{{#if this.legendaryResist.max}}/{{this.legendaryResist.max}}{{/if}}
-                    </span>
-                  {{/if}}
-
-                  {{#if this.hasRegen}}
-                    <span class="tag" title="{{localize 'PARTYVIEW.Regeneration'}}">
-                      {{#if ../showIcons}}
-                        <i class="fa-solid fa-plus icon-regen"></i>
-                      {{/if}}
-                      {{localize "PARTYVIEW.Regen"}}
-                    </span>
-                  {{/if}}
-                </div>
-              </div>
-            </li>
+            {{> "modules/partyview/templates/partials/actor-card.hbs" actor=this showIcons=../showIcons isNpc=true}}
           {{/each}}
         </ul>
       {{else}}
