--- a/styles/partyview.css
+++ b/styles/partyview.css
@@ -266,6 +266,7 @@
   width: 56px;
   height: 56px;
   object-fit: cover;
+  object-position: center top;
   border-radius: 4px;
   border: 1px solid var(--color-border-dark, #444);
 }
